create new request GetSkillByCategory and update swagger docs
