# docs/swagger.json
@@ -140,6 +140,61 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Создание нового проекта строительства",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "skills"
+                ],
+                "summary": "Добавление проекта строительства",
+                "parameters": [
+                    {
+                        "description": "Данные запроса навыка",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Skill"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Запрос навыка успешно создан"
+                    },
+                    "400": {
+                        "description": "Неверный формат запроса",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "409": {
+                        "description": "Конфликт при создании запроса",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "Внутренняя ошибка сервера",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
             }
         },
         "/skills/desc": {
@@ -178,7 +233,7 @@
         },
         "/skills/desc/{id}": {
             "get": {
-                "description": "Выводит описание по персональному ID",
+                "description": "Выводит описание по персональному skill_id",
                 "consumes": [
                     "application/json"
                 ],
@@ -188,11 +243,11 @@
                 "tags": [
                     "skills"
                 ],
-                "summary": "Вывод описания по ID",
+                "summary": "Вывод описания по skill_id",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Вывод описания по id",
+                        "description": "Вывод описания по skill_id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -203,7 +258,7 @@
                         "description": "Вывод пользователя"
                     },
                     "400": {
-                        "description": "Неверный формат ID",
+                        "description": "Неверный формат Skill ID",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
@@ -211,6 +266,49 @@
                     },
                     "404": {
                         "description": "Пользователь не найден",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/skills/{category}": {
+            "get": {
+                "description": "Вывод полного списка скиллов по категории.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "skills"
+                ],
+                "summary": "Вывести все скиллы по категории.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Категория скилла",
+                        "name": "category",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Вывод пользовательских скиллов"
+                    },
+                    "400": {
+                        "description": "Неверный формат",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "404": {
+                        "description": "Категория не найдена",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
@@ -357,6 +455,26 @@
         }
     },
     "definitions": {
+        "models.Skill": {
+            "type": "object",
+            "properties": {
+                "category": {
+                    "type": "string"
+                },
+                "exchange": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "skill": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "models.User": {
             "type": "object",
             "properties": {
